--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,11 @@ events {
 
 http {
     server {
-        listen 80;
+        listen 8000 ssl;
         server_name cloud.pravoizemlya.ru;
+
+        ssl_certificate /etc/letsencrypt/live/cloud.pravoizemlya.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cloud.pravoizemlya.ru/privkey.pem;
 
         location / {
             proxy_pass http://localhost:8000;
