Revert "for https"
This reverts commit dc58755f2d6e3cf6d2b6f8e25898cee47bc5350a.

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,11 +4,8 @@ events {
 
 http {
     server {
-        listen 8000 ssl;
+        listen 80;
         server_name cloud.pravoizemlya.ru;
-
-        ssl_certificate /etc/letsencrypt/live/cloud.pravoizemlya.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cloud.pravoizemlya.ru/privkey.pem;
 
         location / {
             proxy_pass http://localhost:8000;
