--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
         }
 
         location / {
-            return 301 https://$server_name:8443$request_uri;
+            return 301 https://$server_name$request_uri;
         }
     }
 
